new branch merges

--- a/src/page-designer/src/components/designer/designer.scss
+++ b/src/page-designer/src/components/designer/designer.scss
@@ -183,3 +183,9 @@
 .cds--text-area {
   min-inline-size: auto;
 }
+
+.plus-icon {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.6rem;
+}
