--- a/src/flow-designer/src/components/nodes/style.scss
+++ b/src/flow-designer/src/components/nodes/style.scss
@@ -23,8 +23,8 @@
   background: #61e897;
   border-style: solid;
   border-width: 1px;
-  min-width: 16px;
-  min-height: 16px;
+  min-width: 24px;
+  min-height: 24px;
   padding: 8px;
 }
 
@@ -34,7 +34,17 @@
   background: #ed3e32;
   border-style: solid;
   border-width: 1px;
-  min-width: 16px;
-  min-height: 16px;
+  min-width: 24px;
+  min-height: 24px;
   padding: 8px;
+}
+
+.sourceHandlerConnector {
+  border-color: #61e897;
+  background: #61e897;
+}
+
+.targetHandlerConnector {
+  border-color: #ed3e32;
+  background: #ed3e32;
 }
