Code Improvement and Removed Un-nessecary file

--- a/src/flow-designer/src/components/edges/style.scss
+++ b/src/flow-designer/src/components/edges/style.scss
@@ -1,3 +1,19 @@
+.edge-button {
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: 1px solid #ed3e32;
+  cursor: pointer;
+  border-radius: 2px;
+  font-size: 12px;
+  line-height: 1;
+  color: #ed3e32;
+}
+
+.edge-button:hover {
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.08);
+}
+
 .edge-add-Button {
   display: flex;
   align-items: center;
