--- a/src/activities/src/components/activity-list/activity-list.scss
+++ b/src/activities/src/components/activity-list/activity-list.scss
@@ -2,4 +2,7 @@
   display: flex;
   flex-direction: column;
   margin: 16px 0px;
+  padding: 20px;
+  height: calc(100vh - 40px);
+  overflow-y: auto;
 }
