--- a/src/flow-designer/src/components/blocks-tray/blocks-tray.scss
+++ b/src/flow-designer/src/components/blocks-tray/blocks-tray.scss
@@ -59,3 +59,8 @@
   text-align: center;
   color: #3e3e3e;
 }
+
+
+.dnd-node-field .dnd-node-field-text:first-letter {
+  text-transform: uppercase;
+}
