--- a/src/flow-designer/src/components/blocks-tray/blocks-tray.scss
+++ b/src/flow-designer/src/components/blocks-tray/blocks-tray.scss
@@ -4,7 +4,7 @@
   border-radius: 0px 9px 9px 0px;
 }
 
-.dnd-node {
+.block-tray {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,15 +13,15 @@
   cursor: grab;
 }
 
-.dnd-node.input {
+.block-tray.input {
   border-color: #0041d0;
 }
 
-.dnd-node.output {
+.block-tray.output {
   border-color: #ff0072;
 }
 
-.dnd-node-field {
+.block-tray-field {
   width: 72px;
   height: 48px;
   display: flex;
@@ -37,7 +37,7 @@
   background-color: #eeeeee;
 }
 
-.dnd-node-field-icon {
+.block-tray-field-icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,7 +49,7 @@
   background-color: white;
 }
 
-.dnd-node-field .dnd-node-field-text {
+.block-tray-field .block-tray-field-text {
   width: inherit;
   font-family: IBM Plex Sans;
   font-size: 14px;
@@ -60,7 +60,6 @@
   color: #3e3e3e;
 }
 
-
-.dnd-node-field .dnd-node-field-text:first-letter {
+.block-tray-field .block-tray-field-text:first-letter {
   text-transform: uppercase;
 }
