--- a/src/flow-designer/src/components/block-properties-tray/block-properties-tray.scss
+++ b/src/flow-designer/src/components/block-properties-tray/block-properties-tray.scss
@@ -25,3 +25,19 @@
   letter-spacing: 0.1599999964237213px;
   text-align: left;
 }
+
+.block-properties-container .title-bar .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.block-properties-modal {
+  width: 100%;
+  height: calc(100vh - 200px);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 0.5rem 0.5rem 3rem 0.5rem;
+}
