condition bulder css changes

--- a/src/flow-designer/src/components/block-definition-forms/system-task-definition/system-task-definition.scss
+++ b/src/flow-designer/src/components/block-definition-forms/system-task-definition/system-task-definition.scss
@@ -1,6 +1,6 @@
-@import 'react-querybuilder/dist/query-builder.css';
-
-
+.opt-btn>svg {
+  margin-right: 1rem;
+}
 
 .form .title-bar {
   height: 54px;
